--- a/aula2/src/app/app.component.html
+++ b/aula2/src/app/app.component.html
@@ -4,3 +4,9 @@
 <app-date ></app-date>
 <app-about></app-about>
 
+<app-name></app-name>
+<br>
+
+<app-text></app-text>
+
+<app-interpolacao></app-interpolacao>
