--- a/aula2/src/app/views/about/about.component.html
+++ b/aula2/src/app/views/about/about.component.html
@@ -1,3 +1,4 @@
 <p>Sobre a aplicação:<br>
-Feita por {{nome}}, no curso de {{curso}}<br>no {{semestre}} na aula de {{aula}} utilizando </p>
-<p style="color:black">{{api}}</p>
+Feita por {{nome + ' ' + sobrenome}}, no curso de {{curso}}<br>no {{semestre}}º Semestre na aula de {{aula}} utilizando </p>
+<p style="color:black">{{api}}</p><h3 style="text-align: center;">{{somar(1,12)}}</h3>
+<img src="{{imagem}}" alt=""style ="display:block; margin: 0 auto">
