--- a/aula2/src/styles.css
+++ b/aula2/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+.pais{
+  color: orange;
+  font-weight: bold;
+  background-color: yellow;
+  border: 2px solid black;
+}
